--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@mui/utils": "^5.8.6",
         "@tabler/icons": "^1.72.0",
         "apexcharts": "^3.35.3",
+        "axios": "^0.27.2",
+        "cors": "^2.8.5",
         "formik": "^2.2.9",
         "framer-motion": "^6.3.16",
         "material-ui-popup-state": "^4.0.1",
@@ -29,6 +31,7 @@
         "react-router-dom": "6.3.0",
         "react-scripts": "^5.0.1",
         "redux": "^4.2.0",
+        "universal-cookie": "^4.0.4",
         "yup": "^0.32.11"
     },
     "scripts": {
@@ -36,11 +39,6 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app"
-        ]
     },
     "babel": {
         "presets": [
